# cstd

./: .gitignore  CMakeLists.txt  README.md
cstd/stdlib/: abort.h  abs.h  atexit.h  atof.h  atoi.h  atol.h  calloc.h  exit.h  free.h  getenv.h  malloc.h  rand.h  realloc.h  srand.h  stdlib.c  system.h
cstd/string/: memchr.h  memcmp.h  memcpy.h  memmove.h  memset.h  strchr.h  strcmp.h  strcpy.h  string.c  strlen.h  strncmp.h  strncpy.h  strspn.h  strstr.h
